# hunterx

./: README.md  README_FA.md  here.json  pyproject.toml  result.json  test.json
.hunterx/example.com/: crawler.json  dns.json  http.json  javascript.json  params.json  portscanner.json  subdomain.json  tls.json
.hunterx/github.com/: crawler.json  javascript.json  tls.json
.hunterx/google.com/: crawler.json  directory.json  dns.json  http.json  portscanner.json  subdomain.json  tls.json
.hunterx/scanme.nmap.org/: dns.json  portscanner.json
.hunterx/toplearn.com/: crawler.json  dns.json  http.json  javascript.json  params.json  subdomain.json
hunterx/: __main__.py
hunterx/cli/: app.py  banner.py  console.py  panels.py  progress.py  spinner.py  tables.py  theme.py
hunterx/core/: application.py  config.py  container.py  context.py  dns.py  http.py  logger.py  module.py  module_manager.py  plugin.py  plugins.py  result.py  scanner.py
hunterx/core/cache/: __init__.py  base.py  manager.py  memory.py
hunterx/core/events/: __init__.py  base.py  bus.py  events.py
hunterx/core/hooks/: __init__.py  base.py  hooks.py  logger.py  manager.py  timing.py
hunterx/core/metrics/: hook.py  manager.py  models.py
hunterx/core/output/: base.py  json_output.py  manager.py  markdown_output.py
hunterx/core/progress/: hook.py  manager.py
hunterx/core/workspace/: __init__.py  manager.py  storage.py
hunterx/modules/crawler/: crawler.py  extractor.py  manager.py  normalizer.py  robots.py  scanner.py  sitemap.py  source.py
hunterx/modules/directory/: scanner.py  wordlist.py
hunterx/modules/dns/: models.py  module.py  records.py  resolver.py
hunterx/modules/http/: client.py  cookies.py  cors.py  fingerprint.py  module.py  security.py  technologies.py
hunterx/modules/javascript/: common.py  downloader.py  extractors.py  models.py  parser.py  regex.py  scanner.py  worker.py
hunterx/modules/params/: classifier.py  common.py  extractor.py  scanner.py
hunterx/modules/ports/: banner.py  common.py  parser.py  scanner.py  service.py  worker.py
hunterx/modules/subdomain/: bruteforce.py  manager.py  module.py  scanner.py  source.py  wildcard.py  wordlist.py  wordlist.txt
hunterx/modules/takeover/: fingerprints.py  resolver.py  scanner.py  worker.py
hunterx/modules/test/: plugin.py
hunterx/modules/tls/: auditor.py  parser.py  scanner.py  worker.py
hunterx/plugins/: base.py  loader.py  registry.py
hunterx/plugins/crawler/: crawler.py
hunterx/plugins/directory/: plugin.py
hunterx/plugins/dns/: plugin.py
hunterx/plugins/http/: plugin.py
hunterx/plugins/javascript/: plugin.py
hunterx/plugins/params/: plugin.py
tests/: test_takeover.py
wordlists/: common.txt
(+16 files in other folders)
