[project]
name = "hunterx"
version = "0.1.0"
description = "Modern modular reconnaissance framework for bug bounty hunters and security researchers."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Alireza" }
]

dependencies = [
    "typer>=0.16.0",
    "rich>=14.0.0",
    "dnspython>=2.8.0",
]

[project.scripts]
hunterx = "hunterx.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
