[project]
name = "hunterx-reconhive"
version = "0.2.5"
description = "Modern modular reconnaissance framework for bug bounty hunters and security researchers."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Alireza" }
]

dependencies = [
    "typer>=0.16.0",
    "rich>=14.0.0",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "h2>=4.3.0",
    "beautifulsoup4>=4.15.0",
    "bs4>=0.0.2",
    "lxml>=6.1.1",
]

[project.scripts]
hunterx = "hunterx.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hunterx"]

[dependency-groups]
dev = [
    "build>=1.5.1",
    "pytest>=9.1.1",
]
